Ported to pixijs

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,19 +47,16 @@
       <li>Selected: <span id="selected"></span></li>
     </ul>
 
-    <canvas width="1920" height="1080"></canvas>
-
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.7.1/pixi.min.js"></script>
     <script>
 
-    var canvas = document.querySelector("canvas")
+    let width = window.innerWidth, height = window.innerHeight;
 
-    canvas.width = window.innerWidth
-    canvas.height = window.innerHeight
+    let stage = new PIXI.Container();
+    let renderer = PIXI.autoDetectRenderer(width, height, {antialias: !0, transparent: !0, resolution: 1});
 
-    var context = canvas.getContext("2d"),
-        width = canvas.width,
-        height = canvas.height;
+    document.body.appendChild(renderer.view);
 
     var simulation = d3.forceSimulation()
         .force(
@@ -72,7 +69,7 @@
           "charge",
           d3.forceManyBody()
             .distanceMin(25)
-            .distanceMax(200)
+            .distanceMax(100)
             .strength(-50)
         )
         .force(
@@ -82,12 +79,23 @@
         .force(
           "collision",
           d3.forceCollide()
-          .radius(function(d) { return nodeSize(d) + 5 })
+          .radius((d) => d.weight + 5)
           .strength(1)
         );
 
     d3.json("/sigma", function(error, graph) {
       if (error) throw error;
+
+      let links = new PIXI.Graphics();
+          stage.addChild(links);
+
+          graph.nodes.forEach((node) => {
+              node.gfx = new PIXI.Graphics();
+              node.gfx.beginFill(0x20273c);
+              links.lineStyle(1, 0xffffff, 0.1);
+              node.gfx.drawCircle(0, 0, node.weight);
+              stage.addChild(node.gfx);
+          });
 
       simulation
           .nodes(graph.nodes)
@@ -96,36 +104,39 @@
       simulation.force("link")
           .links(graph.links);
 
-      d3.select(canvas)
+      d3.select(renderer.view)
           .call(d3.drag()
-              .container(canvas)
+              .container(renderer.view)
               .subject(dragsubject)
               .on("start", dragstarted)
               .on("drag", dragged)
               .on("end", dragended));
 
       function ticked() {
-        context.clearRect(0, 0, width, height);
+          graph.nodes.forEach((node) => {
+              let { x, y, gfx } = node;
+              gfx.position = new PIXI.Point(x, y);
+          });
 
-        context.beginPath();
-        graph.links.forEach(drawLink);
-        context.strokeStyle = "rgba(0,0,0,0.05)";
-        context.lineWidth = 1;
-        context.stroke();
+          links.clear();
+          links.alpha = 0.6;
 
-        context.beginPath();
-        graph.nodes.forEach(drawNode);
-        context.fillStyle = "#20273c";
-        context.fill();
-        context.strokeStyle = "rgba(255,255,255,0.1)";
-        context.lineWidth = 2;
-        context.stroke();
+          graph.links.forEach((link) => {
+              let { source, target } = link;
+              links.lineStyle(1, 0x20273c, 0.1);
+              links.moveTo(source.x, source.y);
+              links.lineTo(target.x, target.y);
+          });
+
+          links.endFill();
+
+          renderer.render(stage);
       }
 
       function dragsubject() {
-        var subject = simulation.find(d3.event.x, d3.event.y);
-        document.getElementById("selected").innerHTML = subject.title + " - " + subject.artist
-        return subject
+          var subject = simulation.find(d3.event.x, d3.event.y);
+          document.getElementById("selected").innerHTML = subject.title + " - " + subject.artist
+          return subject
       }
     });
 
@@ -154,10 +165,6 @@
     function drawNode(d) {
       context.moveTo(d.x + nodeSize(d), d.y);
       context.arc(d.x, d.y, nodeSize(d), 0, 2 * Math.PI);
-    }
-
-    function nodeSize(d) {
-      return 1 + d.weight
     }
 
     </script>
