--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,13 @@
         width: 100%;
         height: 100%;
         background: #fff;
+        color: #20273c;
+        font-family: sans-serif;
+      }
+
+      h2 {
+        margin: 0;
+        margin-bottom: .25rem;
       }
 
       ul {
@@ -18,8 +25,6 @@
 
       li {
         margin: 0 auto;
-        font-family: sans-serif;
-        color: #20273c;
       }
 
       li span {
@@ -38,6 +43,7 @@
   <body>
 
     <ul>
+      <h2>Database Stats:</h2>
       <li>Number of Songs: <span>{{ number_of_songs }}</span></li>
       <li>Number of Transitions: <span>{{ number_of_transitions }}</span></li>
       <li>Number of Artists: <span>{{ number_of_artists }}</span></li>
@@ -63,7 +69,7 @@
           "link",
           d3.forceLink()
             .id(function(d) { return d.id; })
-            .strength(1)
+            .strength(0.01)
         )
         .force(
           "charge",
@@ -92,7 +98,7 @@
           graph.nodes.forEach((node) => {
               node.gfx = new PIXI.Graphics();
               node.gfx.beginFill(0x20273c);
-              links.lineStyle(1, 0xffffff, 0.1);
+              node.gfx.lineStyle(1, 0xffffff, 0.1);
               node.gfx.drawCircle(0, 0, node.weight);
               stage.addChild(node.gfx);
           });
@@ -123,7 +129,7 @@
 
           graph.links.forEach((link) => {
               let { source, target } = link;
-              links.lineStyle(1, 0x20273c, 0.1);
+              links.lineStyle(link.weight, 0x3b476e, 0.3);
               links.moveTo(source.x, source.y);
               links.lineTo(target.x, target.y);
           });
